--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -82,6 +82,7 @@ fieldset {
 
 /* MAIN */
 .main {
+  background-color: $color-dark;
   @media screen and (min-width: 768px) {
     max-width: 980px;
     margin-inline: auto;
