--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -139,7 +139,9 @@
     transform: translateY(+50px);
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 40px;
+  
   }
 
   .previewLanding .card{
