--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -124,6 +124,20 @@ fieldset {
   margin-inline: 4rem;
   margin-bottom: 1.8rem;
 }
+.container-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 45px;
+  @media screen and (min-width: 1020px){
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 60px;
+  }
+ 
+
+}
 .preview{
   display: flex;
   flex-direction: column;
