--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -14,11 +16,11 @@
   
   .header .header__companyLogo {
     height: 31px;
-    color: var(--color-white);
+    color: $color-white;
   }
   
   .header .header__title {
-    font: var(--font-title-brand);
+    font: $font-title-brand;
     text-transform: capitalize;
-    color: var(--color-white);
+    color: $color-white;
   }
