--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,1 +1,11 @@
-@import './variables.scss';
+@import "./variables.scss";
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 19px;
+}
+
+.Footer_logoSponsor {
+  height: 46px;
+}
