form btn photo sizes errors

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -466,3 +466,11 @@ fieldset {
 .icon__github {
   background-image: url('../images/icons/github.svg');
 }
+
+.error-message{
+  color: red;
+  font-size: 16px;
+}
+.form-message{
+  font-size: 8px;
+}
